tests/error/misc_errors/invalid_arg_flag.err
Error: Invalid annotation (at $FILE:10:16)
   | 
 8 | 
 9 | @guppy.declare
10 | def foo(x: int @blah) -> qubit: ...
   |                 ^^^^ Invalid type annotation

Guppy compilation failed due to 1 previous error
